--- a/store_map.html
+++ b/store_map.html
@@ -306,7 +306,7 @@
       d[l] ? console.warn( p + " only loads once. Ignoring:", g ) : d[l] = ( f, ...n ) => r.add( f ) && u().then( () => d[l]( f, ...n ) );
     } )
       ( {
-        key: "AIzaSyDK1w6uWJ4OYsIUYQmoEfWW2JhMujEfWes",
+        key: "",
         v: "weekly"
       } );
   </script>
@@ -318,7 +318,7 @@
   </main>
   <script type="text/javascript">
     ( async () => {
-      MAPS_API_KEY = 'AIzaSyDK1w6uWJ4OYsIUYQmoEfWW2JhMujEfWes';
+      MAPS_API_KEY = '';
 
       // Request needed libraries.
       //@ts-ignore
